--- a/FruitsVeggie.html
+++ b/FruitsVeggie.html
@@ -14,36 +14,33 @@
         <div id="logo">
             <img src="Images\logo.jpg" alt="IndianGrocery">
         </div>    
-    <ul>
-       <li class="item"><a href="index.html">Home</a></li>
-       <li class="item"><a href="aboutUs.html">About Us</a></li>
-       <li class="item submenu"><a href="product.html">Products</a>
-            <div class="submenu-content">
-                <a href="FruitsVeggie.html">Fruits/Veggies</a>
-                <a href="FrozenFood.html">Frozen Food</a>
-                <!-- <a href="#">Snacks</a>
-                <a href="#">Spices</a> -->
-            </div>
-        </li>
-       <li class="item"><a href="contact.html">Contact Us</a></li>
-    </ul>
-    <div id="rightNav">
-        <input type="text" id="search">
-        <button class="btn text-bg-danger text-black border-2 fw-semibold px-1 py-0">Search</button>
-        <!-- <img src="./Images/cart_logo.jpg" alt="Shopping cart"> -->
-        <button type="button" class="btn btn-success my-2 my-sm-0 m-2" data-toggle="modal"
-        data-target="#staticBackdrop">
-         <i class="fas fa-shopping-cart total-count"></i>
-     </button>
-    </div>
-</nav> 
+        <ul>
+            <li class="item"><a href="index.html">Home</a></li>
+            <li class="item"><a href="aboutUs.html">About Us</a></li>
+            <li class="item submenu"><a href="product.html">Products</a>
+                    <div class="submenu-content">
+                        <a href="FruitsVeggie.html">Fruits/Veggies</a>
+                        <a href="FrozenFood.html">Frozen Food</a>
+                    </div>
+                </li>
+            <li class="item"><a href="contact.html">Contact Us</a></li>
+        </ul>
+        <div id="rightNav">
+            <input type="text" id="search">
+            <button class="btn text-bg-danger text-black border-2 fw-semibold px-1 py-0">Search</button>
+            <button type="button" class="btn btn-success my-2 my-sm-0 m-2" data-toggle="modal"
+            data-target="#staticBackdrop">
+            <i class="fas fa-shopping-cart total-count"></i>
+        </button>
+        </div>
+    </nav> 
 <div>
     <div class="heading_title">
         <h1 class="heading_item">Fruits And Vegetables</h1>
     </div>    
     <div class="tabs_item current container">
         <div class="row justify-content-center pt-4">
-            <div class="col-lg-3 col-md-6">
+             <div class="col-lg-3 col-md-6">
                 <div class="featured-item">
                    <div class="featured-item-img"> 
                         <a>                     
@@ -114,7 +111,7 @@
                       </a>
                    </div>
                    <div class="content">
-                      <h3><a href="#">Apple</a></h3>
+                      <h3><a href="#">Banana</a></h3>
                       <hr>
                       <div class="content-in">
                          <h4>Kr. 30 </h4>
@@ -122,36 +119,14 @@
                       </div>
                       <hr>
                       <div class="featured-content-list">
-                         <button type="button" data-name="apple" data-price="30" class="default-btn border-radius-5"> Add to cart</button>
+                         <button type="button" data-name="Banana" data-price="30" class="default-btn border-radius-5"> Add to cart</button>
                       </div>
                    </div>
                 </div>
-             </div>
-             <!-- <div class="col-lg-3 col-md-6">
-                <div class="featured-item">
-                   <div class="featured-item-img">
-                      <a href="#">
-                         <img src="./Images/apple.jpg" alt="Appleimages">
-                      </a>
-                   </div>
-                   <div class="content">
-                      <h3><a href="#">Apple</a></h3>
-                      <hr>
-                      <div class="content-in">
-                         <h4>Kr. 50 </h4>
-                         <span>(4.9)<i class="fa fa-star"></i></span>
-                      </div>
-                      <hr>
-                      <div class="featured-content-list">
-                         <button type="button" data-name="apple" data-price="50" class="default-btn border-radius-5"> Add to cart</button>
-                      </div>
-                   </div>
-                </div>
-             </div> -->
-        <!-- </div> -->
-    </div>    
+             </div>             
+        </div>    
+    </div>
 </div>
-
 <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
          aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
@@ -170,7 +145,6 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <!-- <button type="button" class="btn btn-danger clear-all">Clear All</button> -->
                 </div>
             </div>
         </div>
