--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Best Online  Grocery store | IndianGrocery.com</title>
+    <title>Best Online  Grocery store | OnlineGrocery.com</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.6.0/css/all.min.css">
@@ -11,7 +11,7 @@
 <body class="bg-image">
     <nav id="navbar">
         <div id="logo">
-            <img src="Images\logo.jpg" alt="IndianGrocery">
+            <img src="Images\logo.jpg" alt="OnlineGrocery">
         </div>
     
         <ul>
@@ -21,8 +21,7 @@
                     <div class="submenu-content">
                         <a href="FruitsVeggie.html">Fruits/Veggies</a>
                         <a href="FrozenFood.html">Frozen Food</a>
-                        <!-- <a href="#">Snacks</a>
-                        <a href="#">Spices</a> -->
+                        
                     </div>
             </li>
             <li class="item"><a href="contact.html">Contact Us</a></li>
@@ -31,7 +30,6 @@
         <div id="rightNav">
             <input type="text" id="search">
             <button class="btn text-bg-danger text-black border-2 fw-semibold px-1 py-0">Search</button>
-            <!-- <img src="./Images/cart_logo.jpg" alt="Shopping cart"> -->
             <button type="button" class="btn btn-success my-2 my-sm-0 m-2" data-toggle="modal"
                 data-target="#staticBackdrop">
             <i class="fas fa-shopping-cart total-count"></i>
@@ -64,7 +62,6 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <!-- <button type="button" class="btn btn-danger clear-all">Clear All</button> -->
                 </div>
             </div>
         </div>
